Fixed height input boxes clipping off screen when screen width is low such as on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     background-color: #f5f5f5;
     padding: 16px;
+    padding-bottom: 32px;
 }
 
 .header {
@@ -12,10 +13,6 @@
     align-items: center;
     margin-top: 40px;
     margin-bottom: 24px;
-}
-
-.truck-icon {
-    color: #2196f3;
 }
 
 .title {
@@ -72,6 +69,8 @@
 
 .input {
     flex-grow: 1;
+    min-inline-size: 7ch;
+    field-sizing: content;
     background-color: #f9f9f9;
     border-width: 1px;
     border-color: #ddd;
@@ -96,6 +95,7 @@
 .measurement-unit {
     position: absolute;
     right: 12px;
+    top: 12px;
     font-size: 14px;
     color: #999;
     font-weight: 600;
@@ -113,10 +113,6 @@
     gap: 8px;
     font-size: 16px;
     color: #333;
-}
-
-.calendar-icon {
-    color: #2196f3;
 }
 
 .submit-button {
@@ -145,7 +141,8 @@
     text-align: center;
     color: #999;
     font-size: 16px;
-    /* marginVertical */
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
 
 .trailer-card {
@@ -168,7 +165,6 @@
 .trailer-title-row {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     gap: 8px;
 }
@@ -187,12 +183,10 @@
 
 .delete-button {
     padding: 8px;
-    color: #f44336;
 }
 
 .edit-button {
     padding: 8px;
-    color: #2196f3
 }
 
 .trailer-details {
